src/layouts/components/_case-studies.scss
#case-studies {
  margin-top: 50px;
  margin-bottom: 0;
  -webkit-overflow-scrolling: touch;
  display: grid;
  grid-template-columns: 1fr;

  @include breakpoint(medium) {
    margin-top: 70px;
    margin-bottom: 30px;
    grid-template-columns: 1fr;
  }

  @include breakpoint(large) {
    margin-top: 70px;
    margin-bottom: 40px;
    grid-template-columns: 1fr 1fr;
  }


  grid-auto-flow: dense;
  grid-gap: 30px;

  .item {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    position: relative;
    height: 100%;
    width: 100%;
    min-height: 300px;
    grid-column: span 1;
    overflow: hidden;

    @include breakpoint(medium) {
        min-height: 300px;
    }

    @include breakpoint(large) {
        min-height: 460px;
    }

    .item-inner {
      padding: 25px 7% 25px 7%;
      transition: all .2s ease 0s;
      position: absolute;
      top: 0;
      height: calc(100% - 7%);
      background:rgba(0,0,0,0.6);
      width: calc(100% - 14%);
      z-index: 1;
      * {
        color: #fff;
      }

      h3 {
        line-height: 1.1;
      }

      span {
        font-size: .8rem;
        display: inline-block;
        @include breakpoint(medium) {
          font-size: .9rem;
        }

        @include breakpoint(large) {
          font-size: .9rem;
        }
      }

      @include breakpoint(medium) {
        background: transparent;
        * {
          color: inherit;
        }
      }

      @include breakpoint(large) {
        background: transparent;
        padding: 36px;
        width: calc(100% - 72px);
        height: calc(100% - 72px);
        * {
          color: inherit;
        }
      }
    }

    &:hover {
      .item-inner__content {
        opacity: .7;
        -webkit-transform: translate3d(0,0,0);
        transform: translate3d(0,0,0);
      }
    }

    .item-inner__content {
      transition: opacity .3s ease-out .1s,transform .3s ease-out .1s,-webkit-transform .3s ease-out .1s;
      opacity: .7;
      max-width: 100%;
      -webkit-transform: translate3d(0,0,0);
      transform: translate3d(0,0,0);
      z-index: 4;
      position: relative;
      font-size: 15px;
      @include breakpoint(medium) {
        -webkit-transform: translate3d(-5px,0,0);
        transform: translate3d(-5px,0,0);
        opacity: 0;
        max-width: 80%;
        font-size: 1.0588235294117647rem;
      }

      @include breakpoint(large) {
        -webkit-transform: translate3d(-5px,0,0);
        transform: translate3d(-5px,0,0);
        opacity: 0;
        font-size: 1.1764705882352942rem;
        max-width: 90%;
      }


      p {
        font-size: 15px;
        @include breakpoint(medium) {
          font-size: 1.0588235294117647rem;
        }

        @include breakpoint(large) {
          font-size: 1.1764705882352942rem;
        }
      }

      a {
        font-size: 15px;
        @include breakpoint(medium) {
          font-size: 17px;
        }

        @include breakpoint(large) {
          font-size: 17px;
        }
      }
    }

    /*&#wateraid {
      background-image: url('../images/wateraid-video-bg.png');
      color: #fff;

      .overlay {
        height: 100%;
        width: 100%;
        position: absolute;
        top: 0px;
        left: 0px;
        z-index: 2;
        transition: all 0.2s;
        background:rgba(0,0,0,0.6);

        @include breakpoint(medium) {
          background: none;
        }

        @include breakpoint(large) {
          background: none;
        }


        &:hover, &:active, &:focus {
          background:rgba(0,0,0,0.6);
          transition: all 0.2s;
        }
      }

      .item-inner {
        overflow: hidden;

        h3, span {
          z-index: 4;
          position: relative;
          line-height: 1.1;
        }

        .case-study-video {
          position: absolute;
          top: 50%;
          left: 50%;
          -webkit-transform: translateX(-50%) translateY(-50%);
          transform: translateX(-50%) translateY(-50%);
          min-width: 100%;
          min-height: 100%;
          width: auto;
          height: auto;
        }
      }
    }*/

    &#mary-jane-speechtherapy {
      color: #fff;
    }

    &#wateraid  {
      color: #fff;
    }

    &#hb-cleaning {
      color: #fff;
    }

    &#southern-sports {
      color: #fff;
    }

    &#mirum-animation-logo {
      color: #fff;
    }

    &#mirum-opus-2018 {
      color: #fff;
    }

    &#brand-hub {
      background-size: contain;
      background-color: #E9E9E9;
    }
  }

  .item-inner:hover,
  .item-inner:active {
    * {
      color: #fff;
    }
      background:rgba(0,0,0,0.6);
      transition: all 0.2s;
  }

}


// .no-webp #mary-jane-speechtherapy {
//   background-image: url('../images/mj-speechtherapy.jpg') !important;
// }
//
// .no-webp #wateraid  {
//   background-image: url('../images/wateraid.jpg') !important;
// }
//
// .no-webp #hb-cleaning {
//   background-image: url('../images/carpet_cleaning_update.jpg') !important;
// }
//
// .no-webp #brand-hub {
//   background-image: url('../images/brand-hub-logo.jpg') !important;
// }

